--- a/abstract.tex
+++ b/abstract.tex
@@ -9,7 +9,7 @@ Erste Ergebnisse zeigen, dass das \textit{Parsivald} genannte Modell Abscheidung
 Somit lassen sich innerhalb weniger Tage Schichtabscheidungen mit einer Dicke von \SI{100}{\angstrom} simulieren.
 Die kristallinen und amorphen Schichten zeigen glatte Oberflächen, wobei auch mehrlagige Systeme auf die jeweilige Lagenrauheit untersucht werden.
 Die Struktur der Schicht wird hauptsächlich durch die verwendeten molekulardynamischen Kraftfelder bestimmt, wie Untersuchungen der physikalischen Gasphasenabscheidung von Gold, Kupfer, Silizium und einem Kupfer-Nickel-Multilagensystem zeigen.
-Stark strukturierte Substrate führen hingegen zu Artefakten in Form von Nanoporen und Hohlräumen aufgrund des verwendeten \todo{Wirklich der KMC-Algorithmus? Nicht eher die Charakterisierung der Oberfläche?}KMC-Algorithmus'.
+Stark strukturierte Substrate führen hingegen zu Artefakten in Form von Nanoporen und Hohlräumen aufgrund der verwendeten KMC-Methode.
 Zur Simulation von chemischen Gasphasenabscheidungen werden die Precursor-Reaktionen von Silan mit Sauerstoff sowie Oberflächen-Reaktionen von Wasser mit $\alpha$-\ce{Al2O3} mit reaktiven Kraftfeldern (ReaxFF) berechnet, allerdings ist weitere Arbeit notwendig, um komplette Abscheidungen auf diese Weise zu simulieren.
 
 Mit Parsivald wird somit die Erweiterung einer Software präsentiert, die Gasphasenabscheidungen auf großen Substraten effizient simulieren kann, dabei aber auf aussagekräftige molekulardynamische Kraftfelder angewiesen ist.
