--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -1,4 +1,4 @@
-\section{Aluminiumoxid-ALD}
+1\section{Aluminiumoxid-ALD}
 \label{aluminaald}
 
 Einen Vorzeige-Prozess für Atomlagenabscheidungen bildet die Abscheidung von Aluminiumoxid \ce{Al2O3}\cite{puurunen_surface_2005}, für die häufig das Precursorpaar Trimethylaluminium (TMA, \ce{Al(CH4)3}) und Wasser genutzt wird.
@@ -38,7 +38,8 @@ Die Abkühlung wurden versehentlich um einen Faktor 10 zu schnell durchgeführt,
 Eine erneute Berechnung der Werte steht noch aus, doch zeigen sich anhand der Dichten der amorpher Strukturen genügend Hinweise auf die Anwendbarkeit der Parametrisierungen.
 Referenzwerte der Dichten für unterschiedliche Temperaturen liegen bei \SI{3.99}{\gpcc} bei Raumtemperatur und \SI{3.80}{\gpcc} bei \SI{1500}{\kelvin}\cite{fiquet_high-temperature_1999}.
 Bindungslängen und Koordinationszahlen wurden direkt aus der RDF kristalliner Strukturen bestimmt.
-Ihre Referenzwerte wurden auf die gleiche Weise durch die Untersuchung der idealen Kristallstruktur bestimmt, welche mittels Materials Studio\cite{biovia_materials_2014} auf Basis eines $\alpha$-\ce{Al2O3}-Kristalles präpariert wurde, wobei aufgrund identischer Dichten und übereinstimmender Kristallgitter\cite{haynes_crc_2011} von einer guten Übereinstimmung der Referenzwerte mit experimentellen Werten auszugehen ist.
+Ihre Referenzwerte wurden auf die gleiche Weise durch die Untersuchung der idealen Kristallstruktur bestimmt, welche mittels Materials Studio\cite{biovia_materials_2014} auf Basis eines $\alpha$-\ce{Al2O3}-Kristalles präpariert wurde.
+Aufgrund identischer Dichten und übereinstimmender Kristallgitter\cite{haynes_crc_2011} ist dabei von einer guten Übereinstimmung der Referenzwerte mit experimentellen Werten auszugehen.
 
 Für die Bestimmung der Dichte der amorphen Struktur wurde das Bulkmaterial über den Schmelzpunkt von \SI{2317}{\kelvin} auf \SI{2555}{\kelvin} erhitzt, auf dieser Temperatur relaxiert und langsam auf Raumtemperatur abgekühlt.
 Aufgrund der strukturellen Vielfalt bei amorphen Aluminiumoxiden liegt der Referenzbereich der Dichte von gasphasen-abgeschiedenen \ce{Al2O3}-Schichten zwischen \SI{3.2}{\gpcc} und \SI{3.9}{\gpcc}\cite{wang_dependence_1997}.
@@ -84,7 +85,8 @@ Die Methylgruppen binden nicht mit dem zentralen Aluminium-Atom, so dass sie sic
 Einzig mit dem bereits ausgeschlossenen \pot{Al\_AlO\_AlN}-Parametersatz lassen sich stabile TMA-Moleküle simulieren.
 
 Simulationen von Wassermolekülen waren hingegen mit allen Parametrisierungen erfolgreich.
-Anhand des \pot{Al\_AlO\_AlN}-Parametersatzes wurden auch Simulationen der Reaktionen zwischen TMA und Wasser in der Gasphase versucht, wie sie beispielsweise bei Vermischung der Precursorgase im ALD-Reaktor auftreten können, doch zeigten sie keinen Erfolg, da die \ce{Al-C}-Bindungen entweder zu stark sind oder in zu großem Maß von den Methylgruppen abgeschirmt werden.
+Anhand des \pot{Al\_AlO\_AlN}-Parametersatzes wurden auch Simulationen der Reaktionen zwischen TMA und Wasser in der Gasphase versucht, wie sie beispielsweise bei Vermischung der Precursorgase im ALD-Reaktor auftreten können.
+Diese zeigten keinen Erfolg, da die \ce{Al-C}-Bindungen in der \pot{Al\_AlO\_AlN}-Parametrisierung entweder zu stark sind oder in zu großem Maß von den Methylgruppen abgeschirmt werden.
 
 \subsubsection{Simulation der Hydroxylierung einer $\alpha$-\ce{Al2O3}-Oberfläche}
 
