--- a/appendix.tex
+++ b/appendix.tex
@@ -7,6 +7,7 @@
   \input{appendix_gold}
   \input{appendix_multilayer}
   \input{appendix_silicon}
+  \input{appendix_silica}
   \input{appendix_alumina}
 
   %\newpage
