--- a/appendix_gold.tex
+++ b/appendix_gold.tex
@@ -5,7 +5,7 @@ Die beiden Substrate wurden mit \SI{1}{\nano\meter} breiten Lamellen sowie \SI{1
 Es wird aufgrund der hohen Mobilität von Gold-Atomen auf der Oberfläche eine Relaxierung hinsichtlich einer geringeren Oberfläche erwartet, die nach kurzer Zeit ununterscheidbar von einer glatten Oberfläche sein sollte.
 
 Diese Glättung der Oberfläche ist in Abbildungen~\ref{fig:goldnanostructures-step3} und~\ref{fig:goldnanostructures-step9} klar zu erkennen.
-Wie man besonders an der Relaxierung der Säulen zu erkennen ist, findet die Glättung nicht ausschließlich durch eine Beschichtung der Oberfläche statt, sondern wird durch Relaxierung der Säulen zu einer glätteren Oberfläche erreicht.
+Wie besonders an der Relaxierung der Säulen zu erkennen ist, findet die Glättung nicht ausschließlich durch eine Beschichtung der Oberfläche statt, sondern wird durch Relaxierung der Säulen zu einer glätteren Oberfläche erreicht.
 Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen Gold-Schicht mit ungefähr \SI{0.7}{\nano\meter} unterhalb der ursprünglichen Höhe des Oberflächenprofiles.
 
 \vspace{3em}
