--- a/md.tex
+++ b/md.tex
@@ -108,7 +108,7 @@ Der Druck innerhalb des Systems wird dabei über die Virialgleichung ermittelt, 
 %% \begin{figure}
 %%   \centering
 %%   \def\svgwidth{0.5\textwidth}
-%%   \input{img/cg-gradient.pdf_tex}
+%%   \%input%{img/cg-gradient.pdf_tex}
 %%   \caption[Minimierung durch Konjugierte Gradienten]{
 %%     Minimierung durch konjugierte Gradienten:\\
 %%     a) Optimale Schrittweite\\
