--- a/summary.tex
+++ b/summary.tex
@@ -58,10 +58,12 @@ Der Ereignisdurchsatz des Hauptprozesses ließe sich verringern, indem das Host-
 Zusätzlich ermöglicht die Nutzung einer Delaunay-Triangulation des gesamten Raumes neben einer einfacheren Parallelisierbarkeit des Hauptprozesses auch eine implizite Beschreibung der Oberflächenatome per Alpha-Form, womit die Suche bei der Erstellung von Ereignissen massiv beschleunigt würde.
 Durch diesen Graph-basierten Ansatz sind außerdem die Vorausberechnung ähnlicher Ereignisse möglich, die zu einer weiteren Beschleunigung des Prozesses und zur Verringerung der Reichweiten von Adsorptionsereignissen führt.
 Ebenso würde die Ereignisauswahl vereinfacht, da die unmittelbare Nachbarschaft in der Delaunay-Triangulation direkt referenziert ist, sodass umfangreichere Ereignis-Bedingungen, wie sie bei reaktiven CVD-Simulationen notwendig werden, beschrieben werden können.
-Die anschließende Einbindung von Parsivald in das ACCELERATE-Projekt führt zu einer Sammlung von numerischen Werkzeugen für die Multiskalen-Simulation von Gasphasenabscheidungen, wobei Parsivald von effizienteren Methoden zur Bestimmung und Durchführung von Ereignissen profitieren kann, wobei seine Off-Lattice-Datenstrukturen anderer Software zur effizienten Betrachtung amorpher Strukturen verhilft.
+Die anschließende Einbindung von Parsivald in das ACCELERATE-Projekt führt zu einer Sammlung von numerischen Werkzeugen für die Multiskalen-Simulation von Gasphasenabscheidungen, wobei Parsivald von effizienteren Methoden zur Bestimmung und Durchführung von Ereignissen profitieren kann.
+Seine Off-Lattice-Datenstrukturen können hingegen anderer Software wie Zacros\cite{stamatakis_zacros_2014} zur effizienten Beschreibung amorpher Strukturen verhelfen.
 
 %% Weitere Optimierungen und Prozesse
-Wie in der Arbeit demonstriert wurde, lässt sich Parsivald bereits jetzt zur effizienten Simulation von physikalischen Gasphasenabscheidungen nutzen, wobei die Simulation der PVD auf polykristallinen und amorphen Substraten ebenso denkbar ist wie die Simulation der Abscheidung gemischter Materialien, etwa Legierungen und verschiedenen Multilagen-Systemen.
+Wie in der Arbeit demonstriert wurde, lässt sich Parsivald bereits jetzt zur effizienten Simulation von physikalischen Gasphasenabscheidungen nutzen, wobei die Simulation der PVD auf polykristallinen und amorphen Substraten ebenso denkbar ist wie die Simulation der Abscheidung gemischter Materialien.
+So lassen sich beispielsweise Legierungen und verschiedene Multilagen-Systeme in Simulationen physikalischer Gasphasenabscheidungen untersuchen.
 
 Die reaktive Simulation von chemischen Gasphasenabscheidungen ist mit dem Parsivald-Modell theoretisch möglich, konnte aber noch nicht demonstriert werden, weshalb die Untersuchung passender ReaxFF-Parametersätze notwendig ist.
 Damit wäre auch die Simulation von mehrstufigen Abscheidungen, wie sie etwa für Interconnect-Systeme in der Mikroelektronik genutzt werden\todo{Ref?}, denkbar, bei denen viele verschiedene Materialien auf struktureller Ebene per MD beschrieben werden müssten.
