--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -138,7 +138,7 @@ Sie bilden sich im Verlauf der Simulation als kraterförmige Vertiefungen auf de
 Betrachtungen der MD-Simulationen für die mit der Kraterbildung verbundenen Ereignisse zeigen, dass bei Ankunft des gesputterten Atomes seine kinetische Energie hauptsächlich an ein anderes Teilchen übertragen wird, das dadurch aus der Oberfläche geschlagen wird.
 Derartige Prozesse werden bei PVD-Prozessen bei höheren Energien erwartet\cite{mattox_handbook_2010}\todo{Ref auf ein besseres Paper?}, doch wurde es für die geringen Teilchenenergien in der Simulation \todo{phrasing}nicht erwartet.
 Untersuchungen der Oberflächenkonfiguration zeigen das Vorkommen perfekt kristalliner Flächen am Abscheidungsort, die sich auch im späteren Simulationsverlauf mit einer geringen Wahrscheinlichkeit bilden können.
-Parsivald kann mit herausgeschlagenen Atomen in der aktuellen Version nicht umgehen, weshalb das Ereignis als fehlgeschlagen markiert wird und in den Abbruchraten erkennbar sind, die das Verhältnis von fehlgeschlagenen zu ausgewählten Ereignissen beschreiben.
+Parsivald kann mit herausgeschlagenen Atomen in der aktuellen Version nicht umgehen, weshalb das Ereignis als fehlgeschlagen markiert wird und in den Abbruchraten (Abbildung~\ref{fig:copperworkerdensity-a}) erkennbar sind, die das Verhältnis von fehlgeschlagenen zu ausgewählten Ereignissen beschreiben.
 Die Kraterbildung ist auch in den Rauheiten (Abbildung~\ref{fig:copperparsivald-b}) als leichte Zunahme erkennbar, doch liegt die RMS-Rauheit mit ca. \SI{1.5}{\angstrom} ebenfalls unterhalb der Bindungslänge von \SI{2.556}{\angstrom}.
 %% Es zeigt sich, dass für ein solches Verhalten eine ideale Kristalloberfläche im Umkreis von ca. \SI{3}{\nano\meter} vorhanden sein muss, auf der das Atom direkt zwischen zwei benachbarten Atomen aufkommen muss, damit eines dieser Atome die Energie aufnimmt und an einen Nachbarn abgibt, der dadurch aus der Oberfläche geschlagen wird.
 
@@ -195,7 +195,7 @@ Deshalb sind Abscheidungssimulationen auf polykristallinen und amorphen Substrat
 
 \subsection{Untersuchung der maximalen Workerdichte}
 
-Ergänzend ist in Abbildung~\ref{fig:copperparsivald-d} ein Histogramm der Zahl paralleler Ereignisse dargestellt, aus der auf die Workerdichte geschlossen werden kann.
+Ergänzend ist in Abbildung~\ref{fig:copperworkerdensity-b} ein Histogramm der Zahl paralleler Ereignisse dargestellt, aus der auf die Workerdichte geschlossen werden kann.
 Die Verteilung hat ihren Mittelwert bei $p = \num{6.3}$ mit dem Maximum von aktiven Prozessen bei $p_\text{peak} = \num{13}$, wobei der Hauptprozess bereits zu $p$ gezählt wurde.
 Dem steht eine analytisch ermittelte maximale Zahl von Prozessen mit $p_\text{max} = \num{30}$ gegenüber, die allerdings eine dichte Packung von MD-Boxen auf der Oberfläche voraus setzt.
 Durch die zufällige Auswahl der Ereignisorte und der Bewahrung der Reihenfolge der Ereignisse ergeben sich in Parsivald-Simulationen mittlere Workerdichten von $\rho_\text{worker} = \SI{18.5}{\percent}$\todo{so what?}.
@@ -208,16 +208,14 @@ Durch die zufällige Auswahl der Ereignisorte und der Bewahrung der Reihenfolge 
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{Cu_abortstatplot}
     \subcaption{Abbruchraten von Kupfer-Simulationen}
-    \label{fig:copperparsivald-c}
+    \label{fig:copperworkerdensity-a}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{Cu_eventhistogram}
     \subcaption{Histogramm gleichzeitiger Ereignisse}
-    \label{fig:copperparsivald-d}
+    \label{fig:copperworkerdensity-b}
   \end{subfigure}
   \caption{Simulationen von Kupfer-PVD auf \SI{200x200x24}{\angstrom} großen Substraten}
-  \label{fig:copperparsivald}
+  \label{fig:copperworkerdensity}
 \end{figure}
-
-\todoline{Abschnitt um einen Absatz kürzen?}
