--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -91,13 +91,13 @@ Einige Potentialdateien sind aus unerfindlichen Gründen nicht mit der aktuellen
 Andere Dateien lassen sich zwar laden und benutzen, äußern jedoch Warnungen über fehlerhafte van-der-Waals-Parameter, die aber nicht zu sonstigen Fehlern führen und meist nur Stickstoff- oder Platzhalteratome\footnote{ReaxFF-Parametrisierungen enthalten ein wechselwirkungsfreies Platzhalter-Element \ce{X} zum Zweck des Ausschlusses einzelner Atome aus der Simulation. Einige seiner Parameter werden von LAMMPS als fehlerhaft markiert.} betreffen.
 Die Parametersätze \pot{chenoweth}, \pot{lg} und \pot{liu\_nitramines} können nicht mit LAMMPS genutzt werden.
 
-\subsubsection{Kristalleigenschaften (c-\ce{Si}, c-\ce{SiO2})}
+\subsubsection{Kristalleigenschaften (c-\ce{Si})}
 
 Diese Untersuchungen sind identisch zu den Untersuchungen der Kristallstrukturen aus den vorherigen Abschnitten.
 Eine Parameterdatei gilt in dieser Hinsicht als erfolgreich, wenn eine Relaxierung der Kristallstruktur unterhalb der Schmelztemperatur von \SI{1687}{\kelvin}\cite{haynes_crc_2011} die Gittereigenschaften bewahrt, wofür die \todo{Diagramm mit den Dichten}Dichten und radialen Verteilungsfunktionen sowie die daraus gewonnenen \todo{Diagramm mit Koordinationszahlen und Bindungslängen}Koordinationszahlen und Bindungslängen verglichen werden.
 Dabei überwiegen die Formen der radialen Verteilungsfunktionen, die nach dem langsamen Herunterkühlen der erhitzten Struktur wieder kristalline Eigenschaften zeigen sollten.
 Dies geschieht allerdings nur bei \pot{kulkarni} und \pot{nielson}, wohingegen die anderen Parametrisierungen auch bei niedrigen \todo{wie niedrig waren die Experimente?}Temperaturen zu einer Verformung des Gitters hin zu amorphen Strukturen neigen.
-\todo{nicht auf Anhang verweisen?}\todo{vor allem: Informationen in den Anhang schreiben!}Detaillierte Informationen zu den Ergebnissen sind in Anhang~\ref{appendix_silicon} zu finden.
+Detaillierte Informationen zu den Ergebnissen sind in Anhang~\ref{appendix_silicon} zu finden.
 
 \subsubsection{Amorphes Silizium (a-\ce{Si})}
 
@@ -114,7 +114,7 @@ Eine Simulation gilt als erfolgreich, wenn die Parsivald-Simulation terminiert u
 
 \subsubsection{Vorbereitungen chemischer Gasphasenabscheidungen}
 
-Tabelle~\ref{tab:siliconpreresults} zeigt auch Ergebnisse zu Voruntersuchungen der chemischen Gasphasenabscheidungen, die in Anhang~\ref{appendix_silicon} kurz vorgestellt werden.
+Tabelle~\ref{tab:siliconpreresults} zeigt auch Ergebnisse zu Voruntersuchungen der chemischen Gasphasenabscheidungen, die in Anhang~\ref{appendix_silica} kurz vorgestellt werden.
 Als Favorit stellt sich hier der \pot{kulkarni}-Parametersatz heraus, der sowohl amorphe und kristalline Strukturen und Oberflächen als auch Moleküle und einige Reaktionen zufriedenstellend beschreiben kann.
 
 \subsection{Simulationen von Silizium-PVD}
